# kquickchatcomponents

./: .gitignore  CMakeLists.txt  KQuickChatComponents.qbs  KQuickChatComponentsConfig.cmake.in  README.md  README.md.license
examples/bubble/: Bubble.qml
examples/textbubble/: TextBubble.qml
src/: CMakeLists.txt  KQuickChatComponents.qbs  kquickchatcomponentsplugin.cpp  kquickchatcomponentsplugin.h  resources.qrc  standardshortcuts.cpp  standardshortcuts.h  utilities.cpp  utilities.h
src/controls/: BubbleControl.qml  ChatBubble.qml  TextBubble.qml  Timestamp.qml  qmldir
